--- a/cal.css
+++ b/cal.css
@@ -10,45 +10,55 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Spartan', sans-serif; }
+  
 
 body {
-  background-color: "hsl(0, 0%, 90%)"; }
+  background-color: rgb(58, 71, 100);
+  overflow-x: hidden;
+}
 
 .calc {
-  position: absolute;
-  top: 20%;
-  left: 40%;
-  background-color: 'hsl(222, 26%, 31%)';
+  position: relative;
+  /* top: 40%; */
+  left: 35%;
+  display: grid;
+  grid-template-columns: 1fr;
+  /* background-color: 'hsl(222, 26%, 31%)'; */
   border-radius: 15px;
-  width: 25%;
+  width: 100%;
   box-shadow: 4px 4px 4px 4px; }
 
 #result {
   background-color:#000;
-  height: 52px;
+  height: 85px;
   width: 100%;
   top: 0;
-  padding: 0; }
+  padding: 0; 
+color: white;}
 
 .theme {
   padding-top: 5px; }
 
 .buttons {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(5,1fr);
   gap: 10px;
   background-color: "hsl(185, 42%, 37%)"; }
   .buttons button {
-    padding: 10px;
+    padding: 25px;
     border-radius: 10px; }
     .buttons button:hover {
       background-color: turquoise;
       transition: 0.5s; }
+      
 
 .screen {
   border-radius: 25px;
   margin-bottom: 15px; }
-
+.title{
+  height: 55px;
+}
 .equal {
   grid-column-start: 3;
   grid-column-end: 5;
@@ -66,11 +76,13 @@ body {
   color: white; }
 
 .chbg {
-  width: 25px;
-  height: 40px; }
+  width: 5%;
+  height: 10%; }
 
 .toggle {
-  width: 75px; }
+  width: 75px; 
+  margin-left: 250px;
+}
 
 html {
   font-size: 100%; }
@@ -78,26 +90,71 @@ html {
 @media only screen and (max-width: 1200px) {
   html {
     font-size: 90%; } }
+    .calc{
+      width:fit-content;
+    }
 @media only screen and (max-width: 1100px) {
   html {
-    font-size: 80%; } }
+    font-size: 80%; } 
+    .calc{
+      width:fit-content;
+    }}
 @media only screen and (max-width: 1000px) {
   html {
-    font-size: 70%; } }
+    font-size: 70%; }
+    .calc{
+      width:fit-content;
+    } }
 @media only screen and (max-width: 900px) {
   html {
-    font-size: 60%; } }
+    font-size: 60%; } 
+    .calc{
+      width:fit-content;
+    }}
 @media only screen and (max-width: 800px) {
   html {
-    font-size: 50%; } }
+    font-size: 50%; } 
+    .calc{
+      width:fit-content;
+    }}
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 40%; } }
+    font-size: 40%; } 
+    .calc{
+      width:fit-content;
+    }}
 @media only screen and (max-width: 500px) {
   html {
-    font-size: 30%; } }
+    font-size: 30%; 
+  } 
+  .calc{
+    width:fit-content;
+    position: relative;
+    left: 10px;
+  }
+  .buttons button {
+    padding: 25px;
+    border-radius: 10px;
+   }
+   #result{
+     height: 78px;
+   }
+}
 @media only screen and (max-width: 400px) {
   html {
-    font-size: 20%; } }
-
-/*# sourceMappingURL=cal.css.map */
+    font-size: 20%; }
+    .calc{
+      width:fit-content;
+      position: relative;
+      left: 10px;
+     
+      /* height: fit-content; */
+    } 
+    body{
+      overflow-x: hidden;
+    }
+    
+    .buttons button {
+      padding: 19px;
+      border-radius: 10px;
+     }}
