--- a/cal.css
+++ b/cal.css
@@ -6,7 +6,7 @@
     color: white;
 } */
 * {
-  padding: 0;
+  /* padding: 0; */
   margin: 0;
   box-sizing: border-box;
   font-family: 'Spartan', sans-serif; }
@@ -98,6 +98,9 @@ html {
     font-size: 80%; } 
     .calc{
       width:fit-content;
+      position: relative;
+      left: 10px;
+      padding: 20px;
     }}
 @media only screen and (max-width: 1000px) {
   html {
@@ -116,13 +119,21 @@ html {
     font-size: 50%; } 
     .calc{
       width:fit-content;
+      position: relative;
+      left: 150px;
+      padding: 20px;
     }}
 @media only screen and (max-width: 600px) {
   html {
     font-size: 40%; } 
     .calc{
       width:fit-content;
-    }}
+      position: relative;
+      left: 10px;
+      padding: 20px;
+      margin:auto
+  }
+    }
 @media only screen and (max-width: 500px) {
   html {
     font-size: 30%; 
@@ -131,6 +142,7 @@ html {
     width:fit-content;
     position: relative;
     left: 10px;
+    padding: 23px;
   }
   .buttons button {
     padding: 25px;
@@ -147,6 +159,8 @@ html {
       width:fit-content;
       position: relative;
       left: 10px;
+      margin: auto;
+      /* padding: 20px; */
      
       /* height: fit-content; */
     } 
