mobile view updated

--- a/cal.css
+++ b/cal.css
@@ -87,7 +87,7 @@ color: white;}
 html {
   font-size: 100%; }
 
-@media only screen and (max-width: 1200px) {
+/* @media only screen and (max-width: 1200px) {
   html {
     font-size: 90%; } }
     .calc{
@@ -122,8 +122,8 @@ html {
       position: relative;
       left: 150px;
       padding: 20px;
-    }}
-@media only screen and (max-width: 600px) {
+    }} */
+@media  screen and (max-width: 1366px) {
   html {
     font-size: 40%; } 
     .calc{
@@ -133,8 +133,9 @@ html {
       padding: 20px;
       margin:auto
   }
+  
     }
-@media only screen and (max-width: 500px) {
+/* @media only screen and (max-width: 500px) {
   html {
     font-size: 30%; 
   } 
@@ -159,11 +160,11 @@ html {
       width:fit-content;
       position: relative;
       left: 10px;
-      margin: auto;
-      /* padding: 20px; */
+      /* margin: auto; */
+      /* padding: 40px; */
      
       /* height: fit-content; */
-    } 
+    /* } 
     body{
       overflow-x: hidden;
     }
@@ -171,4 +172,4 @@ html {
     .buttons button {
       padding: 19px;
       border-radius: 10px;
-     }}
+    }} */ 
